fix card spacing

--- a/styles/features.css
+++ b/styles/features.css
@@ -36,7 +36,7 @@
 }
 
 .cards-vertical {
-  max-width: 360px;
+  max-width: 384px;
   padding-left: 24px;
 }
 
@@ -47,7 +47,7 @@
 
 .card {
   position: relative;
-  margin: 30px 0 100px 40px;
+  margin: 30px 0 70px 40px;
 }
 
 .card:last-of-type {
@@ -61,6 +61,10 @@
   z-index: -1;
 }
 
+.card__title {
+  margin-bottom: 16px;
+}
+
 @media screen and (max-width: 768px) {
   .cards-vertical {
     padding: 0;
@@ -69,5 +73,9 @@
 
   .card {
     margin-bottom: 75px;
+  }
+
+  .card__title {
+    margin-bottom: 8px;
   }
 }
